[MOD] Normalized rt_movie rating to score out of 10

--- a/index.ipynb
+++ b/index.ipynb
@@ -2263,138 +2263,6 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>review</th>\n",
-       "      <th>rating</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>A distinctly gallows take on contemporary fina...</td>\n",
-       "      <td>3/5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3</td>\n",
-       "      <td>It's an allegory in search of a meaning that n...</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>... life lived in a bubble in financial dealin...</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Continuing along a line introduced in last yea...</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>3</td>\n",
-       "      <td>... a perverse twist on neorealism...</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54427</th>\n",
-       "      <td>2000</td>\n",
-       "      <td>The real charm of this trifle is the deadpan c...</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54428</th>\n",
-       "      <td>2000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1/5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54429</th>\n",
-       "      <td>2000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2/5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54430</th>\n",
-       "      <td>2000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.5/5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54431</th>\n",
-       "      <td>2000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3/5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>54432 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         id                                             review rating\n",
-       "0         3  A distinctly gallows take on contemporary fina...    3/5\n",
-       "1         3  It's an allegory in search of a meaning that n...    NaN\n",
-       "2         3  ... life lived in a bubble in financial dealin...    NaN\n",
-       "3         3  Continuing along a line introduced in last yea...    NaN\n",
-       "4         3             ... a perverse twist on neorealism...     NaN\n",
-       "...     ...                                                ...    ...\n",
-       "54427  2000  The real charm of this trifle is the deadpan c...    NaN\n",
-       "54428  2000                                                NaN    1/5\n",
-       "54429  2000                                                NaN    2/5\n",
-       "54430  2000                                                NaN  2.5/5\n",
-       "54431  2000                                                NaN    3/5\n",
-       "\n",
-       "[54432 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_rt_movie_reviews = df_rt_movie_reviews[['id', 'review', 'rating', #'fresh', 'critic', 'top_critic', 'publisher','date'\n",
-    "                                          ]]\n",
-    "df_rt_movie_reviews"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "683333ef-8b7a-4b2c-9f8c-985787c79323",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
       "text/plain": [
        "array(['3/5', nan, 'C', '2/5', 'B-', '2/4', 'B', '3/4', '4/5', '4/4',\n",
        "       '6/10', '1/4', '8', '2.5/4', '4/10', '2.0/5', '3/10', '7/10', 'A-',\n",
@@ -2422,17 +2290,81 @@
        "       '7.1', '3 1/2'], dtype=object)"
       ]
      },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_rt_movie_reviews = df_rt_movie_reviews[['id', 'review', 'rating', #'fresh', 'critic', 'top_critic', 'publisher','date'\n",
+    "                                          ]]\n",
+    "df_rt_movie_reviews['rating'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "683333ef-8b7a-4b2c-9f8c-985787c79323",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 6.        ,         nan,  5.3       ,  4.        ,  6.5       ,\n",
+       "        5.        ,  7.1       ,  7.5       ,  8.        , 10.        ,\n",
+       "        2.5       ,  6.25      ,  3.        ,  7.        ,  8.3       ,\n",
+       "        1.7       ,  8.75      ,  4.1       ,  3.75      ,  7.7       ,\n",
+       "        9.        ,  5.5       ,  4.7       ,  2.        ,  5.9       ,\n",
+       "        0.        ,  1.25      ,  3.5       ,  6.2       ,  2.9       ,\n",
+       "        1.        ,  9.5       ,  8.9       , 10.5       ,  7.4       ,\n",
+       "        8.4       ,  7.2       ,  4.4       ,  0.5       ,  4.5       ,\n",
+       "        8.5       ,  1.5       ,  2.3       ,  6.66666667,  8.6       ,\n",
+       "        2.7       ,  4.2       ,  5.8       , 12.5       ,  4.8       ,\n",
+       "        3.8       ,  4.9       ,  5.75      ,  8.8       ,  2.2       ,\n",
+       "        6.8       ,  7.3       ,  3.2       , 11.        ,  6.3       ,\n",
+       "        7.6       ,  8.1       ,  3.33333333,  1.8       ,  8.2       ,\n",
+       "        4.33333333,  7.9       ,  8.7       ,  4.3       ,  9.6       ,\n",
+       "        6.7       ,  9.2       ,  5.2       ,  3.7       ,  1.66666667,\n",
+       "        3.4       ,  9.7       ,  6.6       ,  8.33333333,  5.4       ,\n",
+       "        3.1       ,  7.8       ,  1.1       ,  4.6       , 15.        ,\n",
+       "        7.8       ,  6.9       ,  3.3       ,  9.8       ])"
+      ]
+     },
      "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_rt_movie_reviews['rating'].unique()\n",
-    "# df_rt_movie_reviews[df_rt_movie_reviews['rating'].str.len(2)]\n",
-    "# mask = df_rt_movie_reviews[df_rt_movie_reviews['rating'].str.len() == 2]\n",
+    "grade_to_score = {'A+': 9.5, 'A': 8.9, 'A-': 8.3, 'B+': 7.7, 'B': 7.1, 'B-': 6.5, 'C+': 5.9, \n",
+    "                  'C': 5.3, 'C-': 4.7, 'D+': 4.1, 'D': 3.5, 'D-': 2.9, 'F+': 2.3, 'F': 1.7, 'F-': 1.1,\n",
+    "                  'N':np.nan, 'R':np.nan, 'T':np.nan}\n",
     "\n",
-    "# grade_to_score = {'A+': 10, 'A': 9, 'A-': 8, 'B+': 7, 'B': 6, 'B-': 5, 'C+': 4, 'C': 3, 'C-': 2, 'D+': 1.5, 'D': 1.4, 'D-': 1.3, 'F+': 1.2, 'F': 1.1, 'F-': 1}\n",
+    "def convert_to_score(value):\n",
+    "    if pd.isna(value):\n",
+    "        return np.nan\n",
+    "    value = str(value).strip()\n",
+    "    if value in grade_to_score:\n",
+    "        return grade_to_score[value]\n",
+    "    if ' ' in value and '/' in value:\n",
+    "        whole, frac = value.split()\n",
+    "        num, denom = frac.split('/')\n",
+    "        return round(float(whole) + (float(num)/float(denom)),1)\n",
+    "    if '/' in value:\n",
+    "        num, denom = value.split('/')\n",
+    "        return (float(num) / float(denom)) * 10\n",
+    "    if ' ' in value:\n",
+    "        value = value.replace(' ','.')\n",
+    "        return float(value)\n",
+    "    if '.' in value:\n",
+    "        return float(value)\n",
+    "\n",
+    "df_rt_movie_reviews['score'] = df_rt_movie_reviews['rating'].apply(convert_to_score)\n",
+    "df_rt_movie_reviews['score'].unique()\n",
+    "\n",
+    "# # df_rt_movie_reviews[df_rt_movie_reviews['rating'].str.len(2)]\n",
+    "# mask = df_rt_movie_reviews[df_rt_movie_reviews['rating'].str.len() <= 2]\n",
+    "# mask['rating'].unique()\n",
     "\n",
     "# df_rt_movie_reviews['rating'] = df_rt_movie_reviews['rating'].map(grade_to_score)"
    ]
@@ -2449,14 +2381,15 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 54432 entries, 0 to 54431\n",
-      "Data columns (total 3 columns):\n",
-      " #   Column  Non-Null Count  Dtype \n",
-      "---  ------  --------------  ----- \n",
-      " 0   id      54432 non-null  int64 \n",
-      " 1   review  48869 non-null  object\n",
-      " 2   rating  40915 non-null  object\n",
-      "dtypes: int64(1), object(2)\n",
-      "memory usage: 1.2+ MB\n"
+      "Data columns (total 4 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   id      54432 non-null  int64  \n",
+      " 1   review  48869 non-null  object \n",
+      " 2   rating  40915 non-null  object \n",
+      " 3   score   40253 non-null  float64\n",
+      "dtypes: float64(1), int64(1), object(2)\n",
+      "memory usage: 1.7+ MB\n"
      ]
     },
     {
@@ -2483,6 +2416,7 @@
        "      <th>id</th>\n",
        "      <th>review</th>\n",
        "      <th>rating</th>\n",
+       "      <th>score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2491,11 +2425,13 @@
        "      <td>3</td>\n",
        "      <td>A distinctly gallows take on contemporary fina...</td>\n",
        "      <td>3/5</td>\n",
+       "      <td>6.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>3</td>\n",
        "      <td>It's an allegory in search of a meaning that n...</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2503,11 +2439,13 @@
        "      <td>3</td>\n",
        "      <td>... life lived in a bubble in financial dealin...</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>Continuing along a line introduced in last yea...</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2515,9 +2453,11 @@
        "      <td>3</td>\n",
        "      <td>... a perverse twist on neorealism...</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -2527,51 +2467,56 @@
        "      <td>2000</td>\n",
        "      <td>The real charm of this trifle is the deadpan c...</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>54428</th>\n",
        "      <td>2000</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1/5</td>\n",
+       "      <td>2.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>54429</th>\n",
        "      <td>2000</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2/5</td>\n",
+       "      <td>4.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>54430</th>\n",
        "      <td>2000</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2.5/5</td>\n",
+       "      <td>5.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>54431</th>\n",
        "      <td>2000</td>\n",
        "      <td>NaN</td>\n",
        "      <td>3/5</td>\n",
+       "      <td>6.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>54432 rows × 3 columns</p>\n",
+       "<p>54432 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         id                                             review rating\n",
-       "0         3  A distinctly gallows take on contemporary fina...    3/5\n",
-       "1         3  It's an allegory in search of a meaning that n...    NaN\n",
-       "2         3  ... life lived in a bubble in financial dealin...    NaN\n",
-       "3         3  Continuing along a line introduced in last yea...    NaN\n",
-       "4         3             ... a perverse twist on neorealism...     NaN\n",
-       "...     ...                                                ...    ...\n",
-       "54427  2000  The real charm of this trifle is the deadpan c...    NaN\n",
-       "54428  2000                                                NaN    1/5\n",
-       "54429  2000                                                NaN    2/5\n",
-       "54430  2000                                                NaN  2.5/5\n",
-       "54431  2000                                                NaN    3/5\n",
+       "         id                                             review rating  score\n",
+       "0         3  A distinctly gallows take on contemporary fina...    3/5   6.00\n",
+       "1         3  It's an allegory in search of a meaning that n...    NaN    NaN\n",
+       "2         3  ... life lived in a bubble in financial dealin...    NaN    NaN\n",
+       "3         3  Continuing along a line introduced in last yea...    NaN    NaN\n",
+       "4         3             ... a perverse twist on neorealism...     NaN    NaN\n",
+       "...     ...                                                ...    ...    ...\n",
+       "54427  2000  The real charm of this trifle is the deadpan c...    NaN    NaN\n",
+       "54428  2000                                                NaN    1/5   2.00\n",
+       "54429  2000                                                NaN    2/5   4.00\n",
+       "54430  2000                                                NaN  2.5/5   5.00\n",
+       "54431  2000                                                NaN    3/5   6.00\n",
        "\n",
-       "[54432 rows x 3 columns]"
+       "[54432 rows x 4 columns]"
       ]
      },
      "execution_count": 20,
