[ADD] Created functions of plots to recall

--- a/index.ipynb
+++ b/index.ipynb
@@ -113,7 +113,9 @@
   {
    "cell_type": "markdown",
    "id": "59c61cac-5336-42da-b9e3-faac3b323d28",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Loading Tools"
    ]
@@ -154,9 +156,7 @@
   {
    "cell_type": "markdown",
    "id": "dece57e9-b73b-404c-8130-7e6e000b9f54",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Loading Datasets"
    ]
@@ -1171,7 +1171,9 @@
   {
    "cell_type": "markdown",
    "id": "a7ec887f-a0a8-4396-817c-d22a54166de8",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Exploratory Data Analysis"
    ]
@@ -3064,7 +3066,9 @@
   {
    "cell_type": "markdown",
    "id": "9a8500e2-e09f-406e-b036-0be069e3b5a5",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 4. Feature Relationships\n",
     "- Scatterplot\n",
@@ -3304,9 +3308,7 @@
   {
    "cell_type": "markdown",
    "id": "5d7b4216-e0c4-4602-9800-a3831e0c3b59",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Scatterplots"
    ]
@@ -3329,18 +3331,21 @@
     }
    ],
    "source": [
-    "fig, (ax1, ax2) = plt.subplots(1,2, figsize=(10,8))\n",
-    "sns.scatterplot(data=df, x='budget', y='revenue', ax=ax1)\n",
-    "ax1.set_title('Scatterplot of Budget vs Revenue')\n",
-    "ax1.set_xlabel('Budget')\n",
-    "ax1.set_ylabel('Revenue')\n",
+    "def visualize_df_scatter():\n",
+    "    fig, (ax1, ax2) = plt.subplots(1,2, figsize=(10,8))\n",
+    "    sns.scatterplot(data=df, x='budget', y='revenue', ax=ax1)\n",
+    "    ax1.set_title('Scatterplot of Budget vs Revenue')\n",
+    "    ax1.set_xlabel('Budget')\n",
+    "    ax1.set_ylabel('Revenue')\n",
+    "    \n",
+    "    sns.scatterplot(data=df, x='budget', y='profit', ax=ax2)\n",
+    "    ax2.set_title('Scatterplot of Budget vs Profit')\n",
+    "    ax2.set_xlabel('Budget')\n",
+    "    ax2.set_ylabel('Profit')\n",
+    "                                   \n",
+    "    plt.show()\n",
     "\n",
-    "sns.scatterplot(data=df, x='budget', y='profit', ax=ax2)\n",
-    "ax2.set_title('Scatterplot of Budget vs Profit')\n",
-    "ax2.set_xlabel('Budget')\n",
-    "ax2.set_ylabel('Profit')\n",
-    "                               \n",
-    "plt.show()"
+    "visualize_df_scatter()"
    ]
   },
   {
@@ -3354,9 +3359,7 @@
   {
    "cell_type": "markdown",
    "id": "0c32ce09-6fe0-4d75-985b-c1438209a468",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Heatmap Correlations"
    ]
@@ -3379,11 +3382,14 @@
     }
    ],
    "source": [
-    "plt.figure(figsize=(10, 8))\n",
-    "correlation_matrix = df[['budget', 'revenue', 'profit', 'rating']].corr()\n",
-    "sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm', vmin=-1, vmax=1)\n",
-    "plt.title('Heatmap of Correlation Matrix')\n",
-    "plt.show()"
+    "def visualize_df_heatmap():\n",
+    "    plt.figure(figsize=(10, 8))\n",
+    "    correlation_matrix = df[['budget', 'revenue', 'profit', 'rating']].corr()\n",
+    "    sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm', vmin=-1, vmax=1)\n",
+    "    plt.title('Heatmap of Correlation Matrix')\n",
+    "    plt.show()\n",
+    "\n",
+    "visualize_df_heatmap()"
    ]
   },
   {
@@ -3397,9 +3403,7 @@
   {
    "cell_type": "markdown",
    "id": "83f39cde-d602-411d-909e-998f37efe975",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Pairplots"
    ]
@@ -3422,9 +3426,12 @@
     }
    ],
    "source": [
-    "sns.pairplot(df[['budget', 'revenue', 'profit', 'rating']])\n",
-    "plt.suptitle('Pairplot of Budget, Revenue, Profit, and Rating', y=1.02)\n",
-    "plt.show()"
+    "def visualize_df_pairplot():\n",
+    "    sns.pairplot(df[['budget', 'revenue', 'profit', 'rating']])\n",
+    "    plt.suptitle('Pairplot of Budget, Revenue, Profit, and Rating', y=1.02)\n",
+    "    plt.show()\n",
+    "\n",
+    "visualize_df_pairplot()"
    ]
   },
   {
@@ -3481,29 +3488,35 @@
     }
    ],
    "source": [
-    "genre_revenue = df.groupby('genres')['revenue'].mean().sort_values(ascending=False).head(20)\n",
-    "plt.figure(figsize=(12, 8))\n",
-    "sns.barplot(x=genre_revenue.values, y=genre_revenue.index)\n",
-    "plt.title('Average Revenue by Genre')\n",
-    "plt.xlabel('Average Revenue')\n",
-    "plt.ylabel('Genre')\n",
-    "plt.show()\n",
+    "def visualize_df_genre_revenue():\n",
+    "    genre_revenue = df.groupby('genres')['revenue'].mean().sort_values(ascending=False).head(20)\n",
+    "    plt.figure(figsize=(12, 8))\n",
+    "    sns.barplot(x=genre_revenue.values, y=genre_revenue.index)\n",
+    "    plt.title('Average Revenue by Genre')\n",
+    "    plt.xlabel('Average Revenue')\n",
+    "    plt.ylabel('Genre')\n",
+    "    plt.show()\n",
+    "visualize_df_genre_revenue()\n",
     "\n",
-    "genre_profit = df.groupby('genres')['profit'].mean().sort_values(ascending=False).head(20)\n",
-    "plt.figure(figsize=(12, 8))\n",
-    "sns.barplot(x=genre_profit.values, y=genre_profit.index)\n",
-    "plt.title('Average Profit by Genre')\n",
-    "plt.xlabel('Average Profit')\n",
-    "plt.ylabel('Genre')\n",
-    "plt.show()\n",
+    "def visualize_df_genre_profit():\n",
+    "    genre_profit = df.groupby('genres')['profit'].mean().sort_values(ascending=False).head(20)\n",
+    "    plt.figure(figsize=(12, 8))\n",
+    "    sns.barplot(x=genre_profit.values, y=genre_profit.index)\n",
+    "    plt.title('Average Profit by Genre')\n",
+    "    plt.xlabel('Average Profit')\n",
+    "    plt.ylabel('Genre')\n",
+    "    plt.show()\n",
+    "visualize_df_genre_profit()\n",
     "\n",
-    "genre_rating = df.groupby('genres')['rating'].mean().sort_values(ascending=False).head(20)\n",
-    "plt.figure(figsize=(12, 8))\n",
-    "sns.barplot(x=genre_rating.values, y=genre_rating.index)\n",
-    "plt.title('Average Rating by Genre')\n",
-    "plt.xlabel('Average Rating')\n",
-    "plt.ylabel('Genre')\n",
-    "plt.show()"
+    "def visualize_df_genre_rating():\n",
+    "    genre_rating = df.groupby('genres')['rating'].mean().sort_values(ascending=False).head(20)\n",
+    "    plt.figure(figsize=(12, 8))\n",
+    "    sns.barplot(x=genre_rating.values, y=genre_rating.index)\n",
+    "    plt.title('Average Rating by Genre')\n",
+    "    plt.xlabel('Average Rating')\n",
+    "    plt.ylabel('Genre')\n",
+    "    plt.show()\n",
+    "visualize_df_genre_rating()"
    ]
   },
   {
@@ -3515,9 +3528,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c7a82583-9524-45c3-92e9-8f67163e2ea2",
+   "metadata": {},
+   "source": [
+    "# Hypothesis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b24d1b4-f0ee-4511-9e9e-a5daae2b7e70",
+   "id": "48cee9b8-3a0f-4b9f-a5a2-6b6ad5fa1de5",
    "metadata": {},
    "outputs": [],
    "source": []
