[ADD] Completed statistical analysis without comments.

--- a/index.ipynb
+++ b/index.ipynb
@@ -3696,18 +3696,16 @@
   {
    "cell_type": "markdown",
    "id": "efc75dc9-4017-451f-860a-30a6fe6ad98e",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### Correlation Analysis\n",
     "\n",
-    "By calculating the correlation coefficient, we are able to understand the strength and direction of the relationship between budget and revenue. A correlation coefficient closer to +1 shows positive strength, meaning the closer to +1, the more likely the higher budgets equate to higher revenues."
+    "By calculating the correlation coefficient, we understand the strength and direction of the relationship between budget and revenue. A coefficient closer to +1 indicates a strong positive correlation, meaning higher budgets likely lead to higher revenues."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 62,
    "id": "08a2a269-4657-4ff5-9ba1-57258ae82adf",
    "metadata": {},
    "outputs": [
@@ -3738,9 +3736,7 @@
   {
    "cell_type": "markdown",
    "id": "04da4157-a16c-44f6-9e65-cf0746e23135",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### Regression Analysis\n",
     "\n",
@@ -3749,7 +3745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 63,
    "id": "6438ee1a-c4de-46f6-afa8-3b136bc84050",
    "metadata": {},
    "outputs": [
@@ -3763,7 +3759,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.596\n",
       "Method:                 Least Squares   F-statistic:                     1695.\n",
       "Date:                Thu, 20 Jun 2024   Prob (F-statistic):          2.41e-228\n",
-      "Time:                        20:27:39   Log-Likelihood:                -23444.\n",
+      "Time:                        20:53:43   Log-Likelihood:                -23444.\n",
       "No. Observations:                1150   AIC:                         4.689e+04\n",
       "Df Residuals:                    1148   BIC:                         4.690e+04\n",
       "Df Model:                           1                                         \n",
@@ -3813,12 +3809,12 @@
    "source": [
     "#### T-test\n",
     "\n",
-    "By utilizing the statistical T-test, we compare the average revenue of films released in the spring months (march, april, may) to those released in other months. This will show us -----"
+    "By utilizing the statistical T-test, we compare the average revenue of films released in spring (March, April, May) to those released in other months. This will show if spring films have a significant financial advantage over other times of the year."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 64,
    "id": "fe9c3216-4efa-438d-baae-dd475a41fe05",
    "metadata": {},
    "outputs": [
@@ -3867,12 +3863,12 @@
    "source": [
     "#### ANOVA-test\n",
     "\n",
-    "By utilizing the statistical ANOVA-test, we are able to compare the mean profits across different genres.---"
+    "By utilizing the statistical ANOVA-test, we are able to compare the mean profits across different genres. This will show if there are significant differences in profitability among genres, helping us identify which genres tend to be more profitable."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 67,
    "id": "30d51ed4-5c0d-4022-b466-8bde8f022a14",
    "metadata": {},
    "outputs": [
@@ -3890,7 +3886,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
       "F-statistic: 3.395767441410793, P-value: 3.5309660380714625e-37\n"
      ]
     }
@@ -3901,7 +3896,6 @@
     "from scipy.stats import f_oneway\n",
     "genre_groups = [group['revenue'].values for name, group in df.groupby('genres')]\n",
     "f_stat, p_val = f_oneway(*genre_groups)\n",
-    "print()\n",
     "print(f'F-statistic: {f_stat}, P-value: {p_val}')"
    ]
   },
