[ADD] Comments under t-test analysis for hypothesis 2.

--- a/index.ipynb
+++ b/index.ipynb
@@ -3503,7 +3503,9 @@
   {
    "cell_type": "markdown",
    "id": "efc75dc9-4017-451f-860a-30a6fe6ad98e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Correlation Analysis\n",
     "\n",
@@ -3543,17 +3545,18 @@
   {
    "cell_type": "markdown",
    "id": "04da4157-a16c-44f6-9e65-cf0746e23135",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Confidence Interval of the `Correlation Coefficient`\n",
     "\n",
-    "EDIT BELOW\n",
-    "By calculating regression coefficients, we can understand the relationship between budget and revenue, showing us how much revenue is expected to change for given change in budget"
+    "By calculating the confidence intervals of the correlation coefficient, we quantify the precision and reliability of the relationship between budget and revenue, confirming that the observed positive correlation is statistically significant."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "id": "9048958e-d0e1-4c60-bd3f-ea61d9bebdfb",
    "metadata": {},
    "outputs": [
@@ -3561,7 +3564,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "95% confidence interval for the correlation coefficient: [0.712142869222654, 0.827857130777346]\n"
+      "95% confidence interval for the correlation coefficient is between [0.712142869222654, 0.827857130777346]\n"
      ]
     }
    ],
@@ -3575,7 +3578,7 @@
     "lower_bound = r - margin_err\n",
     "upper_bound = r + margin_err\n",
     "\n",
-    "print(f'95% confidence interval for the correlation coefficient: [{lower_bound}, {upper_bound}]')"
+    "print(f'95% confidence interval for the correlation coefficient is between [{lower_bound}, {upper_bound}]')"
    ]
   },
   {
@@ -3583,9 +3586,11 @@
    "id": "7cc7ad56-9e07-42ba-8d2f-3b2f39abd684",
    "metadata": {},
    "source": [
-    "#### Business Implication\n",
+    "### Business Implication\n",
     "\n",
-    "The `correlation coefficient` between budget and revenue is `0.77` which tells us that as budget increases, revenue tends to increase as well. **It is worth investing in a higher budget film as it could likely lead to higher box-office revenues.** While correlation does not imply causation, this high correlation coefficient suggests that budget is a good predictor of revenue."
+    "The `correlation coefficient` between budget and revenue is `0.77` which tells us that as budget increases, revenue tends to increase as well. **It is worth investing in a higher budget film as it could likely lead to higher box-office revenues.** While correlation does not imply causation, this high correlation coefficient suggests that budget is a good predictor of revenue. \n",
+    "\n",
+    "Furthermore, our 95% confidence interval indicates our correlation coefficient is between 0.71 and 0.82, which is still close to +1, further strengthening the evidence that budget and revenue are related."
    ]
   },
   {
@@ -3593,22 +3598,24 @@
    "id": "32ba8460-f360-42f8-800a-c16619ab79b1",
    "metadata": {},
    "source": [
-    "### 2. Films released during spring months perform better than other seasons."
+    "## 2. Films released during spring months perform better than other seasons."
    ]
   },
   {
    "cell_type": "markdown",
    "id": "c7e39f2c-ea9f-43e0-9d64-b9005c6f4a69",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "#### T-test\n",
+    "### T-test\n",
     "\n",
     "By utilizing the statistical T-test, we compare the average revenue of films released in spring (March, April, May) to those released in other months. This will show if spring films have a significant financial advantage over other times of the year."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 49,
    "id": "fe9c3216-4efa-438d-baae-dd475a41fe05",
    "metadata": {},
    "outputs": [
@@ -3640,6 +3647,16 @@
     "\n",
     "t_stat, p_val = ttest_ind(spring_revenue, other_revenue)\n",
     "print(f'T-statistic: {t_stat}, P-value: {p_val}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0c0b7fa-2e9a-44f4-a58c-965fc4e5cf76",
+   "metadata": {},
+   "source": [
+    "### Business Implication\n",
+    "\n",
+    "Our `p-value` of `0.002896` concludes that we reject the null hypothesis because our `p-value < 0.05` significance level. Coupled with our `t-stat` score `2.9847`, this shows that the average revenue between films released in spring is significantly higher than the average revenue of other times of the year. **Releasing films in the spring could be financially advantageous.**"
    ]
   },
   {
