[ADD] Completed confidence interval for hypothesis 2

--- a/index.ipynb
+++ b/index.ipynb
@@ -3545,9 +3545,7 @@
   {
    "cell_type": "markdown",
    "id": "04da4157-a16c-44f6-9e65-cf0746e23135",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Confidence Interval of the `Correlation Coefficient`\n",
     "\n",
@@ -3556,7 +3554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 52,
    "id": "9048958e-d0e1-4c60-bd3f-ea61d9bebdfb",
    "metadata": {},
    "outputs": [
@@ -3584,7 +3582,9 @@
   {
    "cell_type": "markdown",
    "id": "7cc7ad56-9e07-42ba-8d2f-3b2f39abd684",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Business Implication\n",
     "\n",
@@ -3604,9 +3604,7 @@
   {
    "cell_type": "markdown",
    "id": "c7e39f2c-ea9f-43e0-9d64-b9005c6f4a69",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### T-test\n",
     "\n",
@@ -3615,7 +3613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 53,
    "id": "fe9c3216-4efa-438d-baae-dd475a41fe05",
    "metadata": {},
    "outputs": [
@@ -3651,12 +3649,65 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0c0b7fa-2e9a-44f4-a58c-965fc4e5cf76",
+   "id": "bc6004c1-fc74-4ddc-aa74-efbf09180052",
    "metadata": {},
+   "source": [
+    "### Confidence Interval of the `difference` in the `mean` of spring and other months.\n",
+    "\n",
+    "By calculating the confidence intervals of the correlation coefficient, we quantify the precision and reliability of the relationship between budget and revenue, confirming that the observed positive correlation is statistically significant."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "7056fdb9-163f-4234-a385-59040acbc408",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Spring Months average revenue: 277860127.49812734\n",
+      "Other Months average revenue: 221358793.5605889\n",
+      "Difference In average revenue: 56501333.937538445\n",
+      "--------\n",
+      "95% confidence interval for the difference in means: [15433259.255187407, 97569408.61988948]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean_spring = np.mean(spring_revenue)\n",
+    "mean_other = np.mean(other_revenue)\n",
+    "std_spring = np.std(spring_revenue)\n",
+    "std_other = np.std(other_revenue)\n",
+    "\n",
+    "n_spring = len(spring_revenue)\n",
+    "n_other = len(other_revenue)\n",
+    "stderr_diff = np.sqrt((std_spring**2 / n_spring) + (std_other**2 / n_other))\n",
+    "t_critical = stats.t.ppf(1 - 0.025, df=n_spring + n_other - 2)\n",
+    "margin_err = t_critical * stderr_diff\n",
+    "mean_diff = mean_spring - mean_other\n",
+    "ci_lower = mean_diff - margin_err\n",
+    "ci_upper = mean_diff + margin_err\n",
+    "print(f'Spring Months average revenue: {mean_spring}')\n",
+    "print(f'Other Months average revenue: {mean_other}')\n",
+    "print(f'Difference In average revenue: {mean_diff}')\n",
+    "print('--------')\n",
+    "print(f'95% confidence interval for the difference in means: [{ci_lower}, {ci_upper}]')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0c0b7fa-2e9a-44f4-a58c-965fc4e5cf76",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Business Implication\n",
     "\n",
-    "Our `p-value` of `0.002896` concludes that we reject the null hypothesis because our `p-value < 0.05` significance level. Coupled with our `t-stat` score `2.9847`, this shows that the average revenue between films released in spring is significantly higher than the average revenue of other times of the year. **Releasing films in the spring could be financially advantageous.**"
+    "Our `p-value` of `0.002896` concludes that we reject the null hypothesis because our `p-value < 0.05` significance level. Coupled with our `t-stat` score `2.9847`, this shows that the average revenue between films released in spring is significantly higher than the average revenue of other times of the year. **Releasing films in the spring could be financially advantageous.**\n",
+    "\n",
+    "By further calculating the `spring months average revenue` and the `other months average revenue`, we can truly see if the spring months lead to higher. We calculated the `difference in averages` to see how much spring is different from the other months as well as the `confidence interval of difference in averages` to provide additional support in defending that releasing films in spring could lead to financial advantages."
    ]
   },
   {
@@ -3664,7 +3715,7 @@
    "id": "f874219d-1303-4a4c-bfa8-c70a2f35c9da",
    "metadata": {},
    "source": [
-    "### 3. Certain genres lead to higher revenue than other genres."
+    "## 3. Certain genres lead to higher revenue than other genres."
    ]
   },
   {
@@ -3672,14 +3723,14 @@
    "id": "8e843814-b33d-4381-aead-9d5cefc88487",
    "metadata": {},
    "source": [
-    "#### ANOVA-test\n",
+    "### ANOVA-test\n",
     "\n",
     "By utilizing the statistical ANOVA-test, we are able to compare the mean profits across different genres. This will show if there are significant differences in profitability among genres, helping us identify which genres tend to be more profitable."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 50,
    "id": "30d51ed4-5c0d-4022-b466-8bde8f022a14",
    "metadata": {},
    "outputs": [
@@ -3711,9 +3762,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8add8e0d-ce16-48a6-8974-950dfaee65c7",
+   "metadata": {},
+   "source": [
+    "### Business Implication\n",
+    "\n",
+    "Our `p-value` of `0.002896` concludes that we reject the null hypothesis because our `p-value < 0.05` significance level. Coupled with our `t-stat` score `2.9847`, this shows that the average revenue between films released in spring is significantly higher than the average revenue of other times of the year. **Releasing films in the spring could be financially advantageous.**\n",
+    "\n",
+    "By further calculating the `spring months average revenue` and the `other months average revenue`, we can truly see if the spring months lead to higher. We calculated the `difference in averages` to see how much spring is different from the other months as well as the `confidence interval of difference in averages` to provide additional support in defending that releasing films in spring could lead to financial advantages."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c5cc4c2-72bd-4981-b73f-668e1d7e7976",
+   "id": "25a70bce-bfe2-41b1-aee3-568a024afa89",
    "metadata": {},
    "outputs": [],
    "source": []
